fix: add uWrap for flex

--- a/ng-ueqt/src/styles/flex/index.scss
+++ b/ng-ueqt/src/styles/flex/index.scss
@@ -2,6 +2,9 @@
     display: flex;
     width: 100%;
     height: 100%;
+    .u-flex-wrap {
+        flex-wrap: wrap;
+    }
     .u-flex {
         position: relative;
         box-sizing: border-box;
